fix Linters slide

--- a/index.html
+++ b/index.html
@@ -521,12 +521,12 @@
             <section data-state="standard 10" data-markdown>
               <textarea data-template>
                 ## Linters
-                <img style="height: 30vh; margin: 0; padding: 0;" src="./files/Linter_logo_v2.svg">
+                <img style="height: 20vh; margin: 0; padding: 0;" src="./files/Linter_logo_v2.svg">
                 <p style="font-size: small;"><a href="https://commons.wikimedia.org/wiki/File:Linter_logo_v2.svg">Image</a> by <a href="https://commons.wikimedia.org/wiki/User:Isarra">Isarra</a> under <a href="https://creativecommons.org/licenses/by/4.0/deed.en">CC BY 4.0</a></p>
 
                 - Check for errors, complexity, unused code, or performance bottlenecks
                 - More heavy-handed than formatters
-                - Can fix _most_ issues, if requested
+                - Linters can fix _most_ issues, if requested
 
               </textarea>
             </section>
